# sdk-shared-core

./: Cargo.toml  README.md  build.rs  deny.toml  justfile
.github/workflows/: ci.yml  deps.yml
docs/: sdk-integration.md  service-invocation-protocol.md
release-notes/: README.md  v0.9.0.md
restate-wire-derive/: Cargo.toml
restate-wire-derive/src/: lib.rs
restate-wire-derive/src/field/: message.rs  mod.rs  oneof.rs  scalar.rs
service-protocol-ext/: combinators.proto
service-protocol/dev/restate/service/: protocol.proto
src/: error.rs  fmt.rs  headers.rs  lib.rs  request_identity.rs  retries.rs  tracing_pretty.rs
src/buffer/: host.rs  mod.rs  reader.rs  writer.rs
src/proto/: mod.rs
src/service_protocol/: encoding.rs  header.rs  messages.rs  mod.rs  version.rs
src/tests/: async_result.rs  calls.rs  derive_roundtrip.rs  failures.rs  get_state.rs  host_payload.rs  implicit_cancellation.rs  input_output.rs  mod.rs  promise.rs  replay.rs  run.rs  sleep.rs  state.rs  suspensions.rs
src/vm/: async_results_state.bkp.rs  async_results_state.rs  context.rs  errors.rs  mod.rs  run_state.rs
src/vm/transitions/: async_results.rs  combinators.rs  input.rs  journal.rs  mod.rs  terminal.rs
tests/: bootstrap.rs
