[package]
name = "restate-sdk-shared-core"
version = "0.4.0"
edition = "2021"
description = "SDK Shared core"
license = "MIT"
repository = "https://github.com/restatedev/sdk-shared-core"

[features]
default = []
request_identity = ["dep:ring", "dep:sha2", "dep:jsonwebtoken", "dep:bs58"]
sha2_random_seed = ["dep:sha2"]

[dependencies]
thiserror = "2.0"
prost = "0.13"
bytes = "1.10"
bytes-utils = "0.1"
tracing = "0.1"
paste = "1.0"
strum = { version = "0.27", features = ["derive"] }
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }

sha2 = { version = "=0.11.0-pre.3", optional = true }

bs58 = { version = "0.5", optional = true }
ring = { version = "0.17", optional = true }
jsonwebtoken = { version = "9.3", optional = true }

http = { version = "1.3", optional = true }

[dev-dependencies]
googletest = "0.11"
test-log = { version = "0.2", default-features = false, features = ["trace", "color"] }
assert2 = "0.3"
prost-build = "0.13"
