[package]
name = "restate-sdk-shared-core"
version = "0.7.1"
edition = "2021"
description = "SDK Shared core"
license = "MIT"
repository = "https://github.com/restatedev/sdk-shared-core"

[features]
default = []
request_identity = ["dep:ring", "dep:jsonwebtoken", "dep:bs58"]
sha2_random_seed = ["dep:sha2"]

[dependencies]
thiserror = "2.0"
prost = "0.14"
bytes = "1.10"
bytes-utils = "0.1"
tracing = "0.1"
paste = "1.0"
strum = { version = "0.27", features = ["derive"] }
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }

sha2 = { version = "=0.11.0-rc.5", optional = true }

bs58 = { version = "0.5", optional = true }
ring = { version = "0.17", optional = true }
# jsonwebtoken is pinned to 9.3 because v10 introduced a pluggable crypto
# backend (rust_crypto / aws_lc_rs) that we cannot reliably test across all
# downstream runtimes (Deno, Bun, Vercel, etc.). Once we can verify
# compatibility, we should upgrade to jsonwebtoken 10.x.
jsonwebtoken = { version = "9.3", optional = true }

http = { version = "1.3", optional = true }

[dev-dependencies]
googletest = "0.11"
test-log = { version = "0.2", default-features = false, features = ["trace", "color"] }
assert2 = "0.3.18"
prost-build = "0.14"
rstest = "0.26.1"
